# BeFastGuessing

./: LICENSE  README.md  main.py  pyproject.toml  spotify.py
backend/: config.py  main.py
backend/static/: settings.py
backend/utils/: access_manager.py  helpers.py
frontend/: package-lock.json  package.json
frontend/src/: stores.js
frontend/src/components/: Login.svelte  Track.svelte
frontend/src/routes/: index.svelte
frontend/src/routes/game/: index.svelte
frontend/src/routes/player1/: index.svelte
frontend/src/routes/selection/: index.svelte
static/: responses.py
