[tool.poetry]
name = "befastguessing"
version = "0.1.0"
description = ""
authors = ["Philipp Hoellig <Philipp.Hoellig@gmx.de", "Jonas Kaendler <jonas.kaendler@valueworks.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"
spotipy = "^2.19.0"
uvicorn = "^0.16.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
ipykernel = "^6.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
